<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.saer.login.ui.EnterPhoneNumberFragment"
    tools:theme="@style/Theme.Material3.DayNight">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/send_code_button"
        app:layout_constraintEnd_toEndOf="@id/send_code_button"
        app:layout_constraintStart_toStartOf="@id/send_code_button"
        app:layout_constraintTop_toTopOf="@id/send_code_button" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/enter_phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:text="@string/your_phone_number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/confirm_country_code_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/confirm_country_code_and_phone_number"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_phone_number_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmCountryCodeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_country_code_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmCountryCode"
                    style="@style/DrawableDayNightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                    android:drawablePadding="12dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="textNoSuggestions"
                    android:minWidth="200dp"
                    android:minHeight="48dp"
                    tools:text="Russia" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmCountryCodeLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:digits="0123456789 -.+()"
                    android:focusableInTouchMode="true"
                    android:inputType="phone"
                    android:labelFor="@id/input_phone_number"
                    android:minWidth="200dp"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    tools:text="+79892634770" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>