<resources>
    <string name="app_name">Telegram New</string>

    // Buttons
    <string name="send_code">Send code</string>

    // Label
    <string name="enter_phone_number">Please, enter phone number</string>
    <string name="click_send_code">Please, click send code</string>

    // Error
    <string name="illegal_phone_number">Illegal phone number</string>
    <string name="too_many_requests">Too many requests: try again in </string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_phone_code">Invalid phone code</string>
    <string name="unauthorized">Could not register</string>
    <string name="error">Error</string>

    // Phone number mask
    <string name="phone_number_musk1">8 ([000]) [000]-[00]-[00]</string>
    <string name="phone_number_musk2">+7 ([000]) [000]-[00]-[00]</string>

    // Code
    <string name="code_hint">12345</string>

    // DateTime
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
</resources>