...
        android:id="@+id/enterPhoneNumberFragment"
        android:name="com.saer.login.ui.EnterPhoneNumberFragment"
        android:label="fragment_enter_phone_number"
        tools:layout="@layout/fragment_enter_phone_number">
        <action
            android:id="@+id/action_enterPhoneNumberFragment_to_enterCodeFragment"
            app:destination="@id/enterCodeFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_enterPhoneNumberFragment_to_selectCountryFragment"
...
